# ComputationalIntelligence2022

./: README.md  pyproject.toml
lab1/: README.md  lab1.ipynb  lab1.py  utils.py
lab2/: README.md  lab2.ipynb  lab2.py
lab3/: README.md  lab3.ipynb  lab3.py
playground/: onemax.ipynb
