[tool.poetry]
name = "computationalintelligence2022"
version = "0.1.0"
description = "Ruggero Nocera's solutions for Computational Intelligence laboratories"
authors = ["Ruggero Nocera <9341160+rogierz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.5.0"
ipykernel = "^6.16.0"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
